--- a/multi-task.html
+++ b/multi-task.html
@@ -22,6 +22,44 @@
         .status { padding: 16px; margin: 20px 0; border-radius: 4px; display: none; }
         .status.success { background: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
         .status.error { background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+        }
+        .loading-content {
+            background: white;
+            padding: 40px;
+            border-radius: 8px;
+            text-align: center;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            min-width: 300px;
+        }
+        .loading-spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid #e3e3e3;
+            border-top: 5px solid #2196F3;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 20px auto;
+        }
+        .loading-text {
+            font-size: 18px;
+            color: #333;
+            font-weight: 500;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
         .col-prefix { width: 12%; }
         .col-title { width: 44%; }
         .col-date { width: 12%; }
@@ -37,8 +75,15 @@
         <div class="controls">
             <button id="addRow" class="btn btn-primary">+ Add Row</button>
             <button id="createTasks" class="btn btn-secondary">Create Tasks</button>
+            <button id="closeNow" class="btn btn-danger" style="display: none;">Close Now</button>
         </div>
         <div id="status" class="status"></div>
+        <div id="loading-overlay" class="loading-overlay">
+            <div class="loading-content">
+                <div class="loading-spinner"></div>
+                <div id="loading-text" class="loading-text">Creating tasks...</div>
+            </div>
+        </div>
         <div class="table-container">
             <table id="taskTable">
                 <thead>
