--- a/popup.html
+++ b/popup.html
@@ -7,14 +7,15 @@
 <body>
     <div class="container">
         <h1>Redmine Task Manager</h1>
-        <div style="display: flex; flex-direction: column; align-items: center; gap: 16px; margin-top: 24px; width: 100%;">
+        <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 16px; margin-top: 24px; width: 100%;">
+            <button id="findKeyBtn" type="button" style="padding: 8px 16px; border-radius: 4px; border: 1px solid #2196F3; background: white; color: #2196F3; font-weight: bold; cursor: pointer;">Find Key</button>
             <div style="width: 100%; max-width: 400px; display: flex; gap: 8px; align-items: center; margin-bottom: 16px;">
                 <input id="apiKeyInput" type="text" placeholder="Enter Redmine API Key..." style="flex: 1; padding: 8px; border-radius: 4px; border: 1px solid #ccc;" />
                 <button id="saveApiKeyBtn" type="button" style="padding: 8px 16px; border-radius: 4px; border: none; background: #2196F3; color: white; font-weight: bold;">Save</button>
             </div>
             <button id="gantChartButton" type="button" style="width: 200px;">Gant Chart</button>
-            <button id="synchroButton" type="button" style="width: 200px;">Synchronize</button>
-            <button id="createMultiTaskButton" type="button" style="width: 200px;">Create Multi Task</button>
+            <!-- <button id="synchroButton" type="button" style="width: 200px;">Synchronize</button>
+            <button id="createMultiTaskButton" type="button" style="width: 200px;">Create Multi Task</button> -->
         </div>
     </div>
     <script src="popup.js"></script>
