--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,9 @@
                 <button id="saveApiKeyBtn" type="button" style="padding: 8px 16px; border-radius: 4px; border: none; background: #2196F3; color: white; font-weight: bold;">Save</button>
             </div>
             <button id="gantChartButton" type="button" style="width: 200px;">Gant Chart</button>
+            <button id="myBugsButton" type="button" style="width: 200px;">My Bugs</button>
+            <button id="myTasksButton" type="button" style="width: 200px;">My Tasks</button>
+            <button id="mySpentTimeButton" type="button" style="width: 200px;">My Spent Time</button>
             <!-- <button id="synchroButton" type="button" style="width: 200px;">Synchronize</button>
             <button id="createMultiTaskButton" type="button" style="width: 200px;">Create Multi Task</button> -->
         </div>
